# pyspark-delta

./: .env  .gitignore  README.md  delta-example-simple.ipynb  delta-example.ipynb  justfile  pyproject.toml  simple-delta-scala.ipynb  simple-delta.ipynb  simple-pg.ipynb
data/: marvel.csv  marvel_mod.csv
notebooks/: delta-example.ipynb  simple-delta-scala.ipynb  simple-delta.ipynb  simple-pg.ipynb
