[project]
name = "pyspark-delta-demo"
version = "0.1.0"
description = "A demo project for PySpark with Delta Lake format using JupyterLab"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "delta-spark==4.0.0",
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.7",
    "pyspark==4.0.1",
]
